vlib/v/parser/tests/module_import_same_symbol_err.vv
import math { max }
import arrays { max }
